[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
gloo-net = "0.2"
gloo = "0.10"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
